test/errors/parsing/unsupportedAsIdent2.compopts
--detailed-errors # unsupportedAsIdent2-detailed.good
--no-detailed-errors # unsupportedAsIdent2-brief.good
